--- a/producer01/src/main/resources/bootstrap.yml
+++ b/producer01/src/main/resources/bootstrap.yml
@@ -12,6 +12,19 @@ server:
 spring:
   application:
     name: producer
-logging:
-  level:
-    com.lzw.springcloud: debug
+  cloud:
+    config:
+      label: master
+      uri: http://127.0.0.1:9527
+      profile: test
+      name: application
+  rabbitmq:
+    host: 10.88.27.189
+    username: admin
+    password: admin
+    port: 5672
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
