--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,9 @@
         <module>producer02</module>
         <module>producer03</module>
         <module>producer04</module>
-        <module>hystrix-dashbord</module>
+        <module>hystrix-dashboard</module>
         <module>gateway</module>
+        <module>consumer-alibaba</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
