--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -1,15 +1,18 @@
-eureka:
-  instance:
-    instance-id: config
-  client:
-    fetch-registry: true  #是否从eureka拉取注册表?
-    register-with-eureka: true  #是否注册进eureka?
-    service-url:
-      defaultZone: http://localhost1:7000/eureka,http://localhost2:7001/eureka,http://localhost3:7002/eureka
+#eureka:
+#  instance:
+#    instance-id: config
+#  client:
+#    fetch-registry: true
+#    register-with-eureka: true
+#    service-url:
+#      defaultZone: http://localhost1:7000/eureka,http://localhost2:7001/eureka,http://localhost3:7002/eureka
 server:
   port: 9527
 spring:
   cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
     config:
       server:
         git:
