--- a/producer02/src/main/resources/bootstrap.yml
+++ b/producer02/src/main/resources/bootstrap.yml
@@ -1,23 +1,33 @@
-eureka:
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      defaultZone: http://localhost1:7000/eureka,http://localhost2:7001/eureka,http://localhost3:7002/eureka
-  instance:
-    instance-id: producer02
-    prefer-ip-address: true
+#eureka:
+#  client:
+#    fetch-registry: true
+#    register-with-eureka: true
+#    service-url:
+#      defaultZone: http://localhost1:7000/eureka,http://localhost2:7001/eureka,http://localhost3:7002/eureka
+#  instance:
+#    instance-id: producer02
+#    prefer-ip-address: true
 server:
   port: 8001
 spring:
+  profiles:
+    active: dev
   application:
     name: producer
   cloud:
-    config:
-      label: master
-      uri: http://127.0.0.1:9527
-      profile: test
-      name: application
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+        service: nacos-producer
+      config:
+        server-addr: 127.0.0.1:8848
+        prefix: application
+        group: test
+  #    config:
+#      label: master
+#      uri: http://127.0.0.1:9527
+#      profile: test
+#      name: application
   rabbitmq:
     host: 10.88.27.189
     username: admin
